--- a/index.html
+++ b/index.html
@@ -15,10 +15,181 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">header</header>
+      <header class="header">
+        <img src="img/logo.png" alt="trillo logo" class="logo" />
+
+        <form action="#" class="search">
+          <input
+            type="text"
+            class="search__input"
+            placeholder="Search hotels"
+          />
+          <button class="search__button">
+            <svg class="search__icon">
+              <use xlink:href="img/sprite.svg#icon-magnifying-glass" />
+            </svg>
+          </button>
+        </form>
+
+        <nav class="user-nav">
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-bookmark" />
+            </svg>
+            <span class="user-nav__notification">7</span>
+          </div>
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-chat" />
+            </svg>
+            <span class="user-nav__notification">13</span>
+          </div>
+          <div class="user-nav__icon-box">
+            <img
+              src="img/user.jpg"
+              alt="User photo"
+              class="user-nav__user-photo"
+            />
+            <span class="user-nav__user-name">Jonas</span>
+          </div>
+        </nav>
+      </header>
       <div class="content">
-        <nav class="sidebar">navbar</nav>
-        <main class="hotel-view">main sec</main>
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use>
+                </svg>
+                <span>Hotel</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                </svg>
+                <span>Flight</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <span>Car Rental</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-map"></use>
+                </svg>
+                <span>Tours</span>
+              </a>
+            </li>
+          </ul>
+
+          <div class="legal">&copy; 2017 by trillo. All rights reserved</div>
+        </nav>
+
+        <main class="hotel-view">
+          <div class="gallery">
+            <figure class="gallery__item">
+              <img
+                src="img/hotel-1.jpg"
+                alt="Hotel Photo 1"
+                class="gallery__photo"
+              />
+            </figure>
+            <figure class="gallery__item">
+              <img
+                src="img/hotel-2.jpg"
+                alt="Hotel Photo 2"
+                class="gallery__photo"
+              />
+            </figure>
+            <figure class="gallery__item">
+              <img
+                src="img/hotel-3.jpg"
+                alt="Hotel Photo 3"
+                class="gallery__photo"
+              />
+            </figure>
+          </div>
+
+          <div class="overview">
+            <h1 class="overview__heading">Hotel Las Palmas</h1>
+            <div class="overview__stars">
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+            </div>
+
+            <div class="overview__location">
+              <svg class="overview__icon-location">
+                <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+              </svg>
+              <button class="btn-inline">Albufeira, Portugal</button>
+            </div>
+
+            <div class="overview__rating">
+              <div class="overview__rating-average">8.6</div>
+              <div class="oerview__rating-count">429 votes</div>
+            </div>
+          </div>
+
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
+                ex delectus natus. Accusamus iusto magnam officia natus aperiam,
+                minus quo eaque voluptates repellat sapiente nihil, recusandae
+                vero commodi earum deserunt!
+              </p>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
+                ex delectus natus. Accusamus iusto magnam officia natus aperiam,
+                minus quo eaque voluptates repellat sapiente nihil, recusandae
+                vero commodi earum deserunt!
+              </p>
+              <ul class="list">
+                <li class="list__item">Close to beach</li>
+                <li class="list__item">Breakfast included</li>
+                <li class="list__item">Free wifi</li>
+                <li class="list__item">Free airport shuttle</li>
+                <li class="list__item">Pets allowed</li>
+                <li class="list__item">Air conditioning</li>
+                <li class="list__item">Nightlife</li>
+                <li class="list__item">Perfect for families</li>
+              </ul>
+              <p class="rec__count">
+                Lucy y sus amigas les encantan este hotel!
+              </p>
+              <div class="rec__friends">
+                <img src="img/user-3.jpg" alt="Friend 1" class="rec__photo" />
+                <img src="img/user-4.jpg" alt="Friend 2" class="rec__photo" />
+                <img src="img/user-5.jpg" alt="Friend 3" class="rec__photo" />
+                <img src="img/user-6.jpg" alt="Friend 4" class="rec__photo" />
+              </div>
+            </div>
+
+            <div class="user-reviews"></div>
+          </div>
+        </main>
       </div>
     </div>
   </body>
