--- a/index.html
+++ b/index.html
@@ -163,8 +163,6 @@
               <p class="paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
                 ex delectus natus. Accusamus iusto magnam officia natus aperiam,
-                minus quo eaque voluptates repellat sapiente nihil, recusandae
-                vero commodi earum deserunt!
               </p>
               <ul class="list">
                 <li class="list__item">Close to beach</li>
@@ -176,18 +174,69 @@
                 <li class="list__item">Nightlife</li>
                 <li class="list__item">Perfect for families</li>
               </ul>
-              <p class="rec__count">
-                Lucy y sus amigas les encantan este hotel!
-              </p>
-              <div class="rec__friends">
-                <img src="img/user-3.jpg" alt="Friend 1" class="rec__photo" />
-                <img src="img/user-4.jpg" alt="Friend 2" class="rec__photo" />
-                <img src="img/user-5.jpg" alt="Friend 3" class="rec__photo" />
-                <img src="img/user-6.jpg" alt="Friend 4" class="rec__photo" />
+              <div class="rec">
+                <p class="rec__count">
+                  Lucy y sus amigas les encantan este hotel!
+                </p>
+                <div class="rec__friends">
+                  <img src="img/user-3.jpg" alt="Friend 1" class="rec__photo" />
+                  <img src="img/user-4.jpg" alt="Friend 2" class="rec__photo" />
+                  <img src="img/user-5.jpg" alt="Friend 3" class="rec__photo" />
+                  <img src="img/user-6.jpg" alt="Friend 4" class="rec__photo" />
+                </div>
               </div>
             </div>
 
-            <div class="user-reviews"></div>
+            <div class="user-reviews">
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Sequi quaerat dignissimos eos dolorem autem molestiae magni
+                  doloribus deleniti illum
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-1.jpg"
+                    alt="User 1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Nick Smith</p>
+                    <p class="review__user-date">Feb 23rd, 2017</p>
+                  </div>
+                  <div class="review__rating">7.8</div>
+                </figcaption>
+              </figure>
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
+                  nostrum quam voluptatum ipsa temporibus voluptatem! Molestias
+                  libero iusto minima aspern
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-2.jpg"
+                    alt="User 2"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Mary Davis</p>
+                    <p class="review__user-date">June 22nd, 2017</p>
+                  </div>
+                  <div class="review__rating">9.3</div>
+                </figcaption>
+              </figure>
+
+              <button class="btn-inline">Show all <span>&rarr;</span></button>
+            </div>
+
+          </div>
+          <div class="cta">
+            <h2 class="cta__book-now">Buenos noticias! deponemos de 4 habitaciones gratuitas para las fetchas seleccionadas!</h2>
+            <button class="btn">
+              <span class="btn__visible">Book Now</span>
+              <span class="btn__invisible">Only 4 Rooms Left</span>
+            </button>
           </div>
         </main>
       </div>
